Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-1847

container:schedule used from an external thread can stop container::run loop processing other events

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • proton-c-0.23.0
    • cpp-binding
    • None

    Description

      There are 2 potential problems:

      1. The code that runs the scheduled tasks still accepts new tasks at the same time. So if you keep on scheduling new tasks continuously you could make the scheduler run tasks continuously without ever leaving to process any other events.
      2. The code that accepts timeout events will keep on reading the same event batch until it is empty. So in this case too new tasks could prevent any other events being processed.

      Attachments

        Activity

          People

            astitcher Andrew Stitcher
            astitcher Andrew Stitcher
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: