PROTON-1847: [C++ binding] Ensure that excessive scheduled events can't starve other events